testsuite/escript/classes/fail-exported-class-function.err
fail-exported-class-function.src:4:3: error: Exported function 'Animal::foo' cannot be scoped.