testsuite/escript/classes/fail-exported-class-function.src
// A class cannot reference itself as a base class.

class Animal()
  exported function foo() endfunction
endclass

Animal::foo();
